# prototyping

./: .gitignore
fd_rpc/: CMakeLists.txt  fd_rpc.cpp  fd_rpc.h  fd_worker.cpp
games/IdleInc/: CMakeLists.txt  IdleInc.cpp  IdleInc.h  README.md
games/IdleInc/src/: Game.cpp  Game.h  main.cpp
games/TaxIdle/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  TaxIdle.cpp  TaxIdle.h
games/TaxIdle/include/: Game.h
games/TaxIdle/src/: Game.cpp  main.cpp
ipc/: CMakeLists.txt  client.cpp  server.cpp
pipe/: CMakeLists.txt  pipe.cpp
scale/: CMakeLists.txt  scale.h  test.cpp
shmem/: CMakeLists.txt  shmem.cpp  shmem.h  worker.cpp
sync/: CMakeLists.txt  renderer.cpp  sync.cpp
